--- a/user/bsps/arm/supplement/xilinx-zynq/vscode_template/tasks.json
+++ b/user/bsps/arm/supplement/xilinx-zynq/vscode_template/tasks.json
@@ -5,7 +5,11 @@
       "label": "Start QEMU (waiting for GDB connection)",
       "type": "shell",
       "isBackground": true,
-      "command": "echo Starting QEMU&REPLACE_TOOL_INSTALL_DIR/qemu/bin/qemu-system-aarch64 -M arm-generic-fdt-7series -serial /dev/null -serial mon:stdio -display none -m 1024M -dtb /home/blofeld/quick-start/install/sw/xilinx_zynq_zybo/rtems/../dtb/picozed-zynq7.dtb -s -S",
+      "presentation": {
+        "reveal": "always",
+        "panel": "new"
+      },
+      "command": "echo Starting QEMU&REPLACE_TOOL_INSTALL_DIR/qemu/bin/qemu-system-aarch64 -M arm-generic-fdt-7series -serial /dev/null -serial mon:stdio -display none -m 1024M -dtb REPLACE_TOOL_INSTALL_DIR/../sw/xilinx_zynq_picozed/dtb/picozed-zynq7.dtb -kernel REPLACE_APP_DIR/build/ZynqDemo.elf -s -S",
       "problemMatcher": {
         "pattern": {
             "regexp": "^(Starting QEMU)",
@@ -16,32 +20,13 @@
             "beginsPattern": "^(Starting QEMU)",
             "endsPattern": "^(Starting QEMU)"
         }
-    }    
+      }    
+    },
+    {
+      "label": "Reset target J-LINK",
+      "type": "shell",
+      "command": "/opt/SEGGER/JLink/JLinkExe -device XC7Z015 -if JTAG -jtagconf -1,-1 -autoconnect 1 -speed 100000 -CommandFile REPLACE_APP_DIR/dbg/reset_target.jlink",   
     }
+
   ]
 }
-
-,
-    {
-      "type": "cppdbg",
-      "request": "launch",
-      "name": "J-Link Debug Session",
-      "targetArchitecture": "arm",
-      "program": "${workspaceFolder}/build/ZynqDemo.elf",
-      "miDebuggerPath": "/home/blofeld/quick-start/install/tools/toolchain/bin/arm-rtems6-gdb",
-      "cwd": "${workspaceFolder}/build",
-      "externalConsole": false,
-      "stopAtEntry": true,
-      "MIMode": "gdb",
-      "debugServerPath": "/opt/SEGGER/JLink_V794b/JLinkGDBServerCLExe",
-      "debugServerArgs": "-device XC7Z010 -if JTAG -endian little -select usb=0 -port 1234 -speed adaptive -vd  -singlerun -strict -timeout 0 -nogui",
-      "customLaunchSetupCommands": [
-        {"text": "exec-file '${workspaceRoot}/build/ZynqDemo.elf'"},
-        {"text": "symbol-file '${workspaceRoot}/build/ZynqDemo.dbg'"},
-        {"text": "target extended-remote : 1234"},
-        {"text": "load  '${workspaceRoot}/build/ZynqDemo.elf'"},
-        {"text": "break bsp_fatal"},
-        {"text": "break  main"},
-        {"text": "jump  _start", "ignoreFailures": true}
-      ]
-    }
