--- a/user/bsps/arm/supplement/xilinx-zynq/vscode_template/launch.json
+++ b/user/bsps/arm/supplement/xilinx-zynq/vscode_template/launch.json
@@ -8,42 +8,97 @@
       "targetArchitecture": "arm",
       "program": "${workspaceFolder}/build/ZynqDemo.elf",
       "miDebuggerPath": "REPLACE_TOOL_INSTALL_DIR/toolchain/bin/arm-rtems6-gdb",
+      "miDebuggerServerAddress": "localhost:1234",
       "cwd": "${workspaceFolder}/build",
       "externalConsole": false,
       "stopAtEntry": true,
       "MIMode": "gdb",
       "customLaunchSetupCommands": [
-        {"text": "set breakpoint pending on"},
         {"text": "exec-file '${workspaceRoot}/build/ZynqDemo.elf'"},
         {"text": "symbol-file '${workspaceRoot}/build/ZynqDemo.dbg'"},
-        {"text": "target remote localhost:1234"},
+        {"text": "target extended-remote :1234"},
         {"text": "load  '${workspaceRoot}/build/ZynqDemo.elf'"},
-        {"text": "break  bsp_reset"}
+        {"text": "break bsp_fatal"},
+        {"text": "break bsp_reset"},
+        {"text": "break  main"},
+        {"text": "jump  _start", "ignoreFailures": true}
+        
       ],
+      "logging": { 
+        "moduleLoad": true, 
+        "engineLogging": true, 
+        "trace": true,
+        "exceptions": true,
+        "programOutput": true,
+        "traceResponse": true
+      },
       "preLaunchTask": "Start QEMU (waiting for GDB connection)"
     },
     {
       "type": "cppdbg",
       "request": "launch",
-      "name": "J-Link Debug Session",
+      "name": "PicoZed J-Link Debug Session",
       "targetArchitecture": "arm",
       "program": "${workspaceFolder}/build/ZynqDemo.elf",
       "miDebuggerPath": "REPLACE_TOOL_INSTALL_DIR/toolchain/bin/arm-rtems6-gdb",
+      "miDebuggerServerAddress": "localhost:3333",
       "cwd": "${workspaceFolder}/build",
       "externalConsole": false,
       "stopAtEntry": true,
       "MIMode": "gdb",
-      "debugServerPath": "/opt/SEGGER/JLink_V794b/JLinkGDBServerCLExe",
-      "debugServerArgs": "-device XC7Z015 -if JTAG -endian little -select usb=0 -port 1234 -ir -vd -singlerun -strict -timeout 0 -nogui",
+      "debugServerPath": "/opt/SEGGER/JLink/JLinkGDBServerCLExe",
+      "debugServerArgs": "-device XC7Z015 -if JTAG -endian little -select usb=0 -port 3333 -vd -ir  -speed 100000 -singlerun -strict -timeout 0 -nogui",
       "customLaunchSetupCommands": [
+        {"text": "target extended-remote : 3333"},
         {"text": "exec-file '${workspaceRoot}/build/ZynqDemo.elf'"},
-        {"text": "symbol-file '${workspaceRoot}/build/ZynqDemo.elf'"},
-        {"text": "target extended-remote : 1234"},
+        {"text": "symbol-file '${workspaceRoot}/build/ZynqDemo.dbg'"},
         {"text": "load  '${workspaceRoot}/build/ZynqDemo.elf'"},
         {"text": "break bsp_fatal"},
+        {"text": "break bsp_reset"},
         {"text": "break  main"},
+        {"text": "break  _start"},
         {"text": "jump  _start", "ignoreFailures": true}
       ],
+      "preLaunchTask": "Reset target J-LINK",
+      "logging": { 
+        "moduleLoad": true, 
+        "engineLogging": true, 
+        "trace": true,
+        "exceptions": true,
+        "programOutput": true,
+        "traceResponse": false
+      }
+    },
+    {
+      "type": "cppdbg",
+      "request": "launch",
+      "name": "PicoZed OpenOCD J-Link OpenOCD Debug Session",
+      "targetArchitecture": "arm",
+      "program": "${workspaceFolder}/build/ZynqDemo.elf",
+      "miDebuggerPath": "REPLACE_TOOL_INSTALL_DIR/toolchain/bin/arm-rtems6-gdb",
+      "miDebuggerServerAddress": "localhost:3333",
+      "cwd": "${workspaceFolder}/build",
+      "externalConsole": false,
+      "stopAtEntry": true,
+      "MIMode": "gdb",
+      "customLaunchSetupCommands": [
+        {"text": "exec-file '${workspaceRoot}/build/ZynqDemo.elf'"},
+        {"text": "symbol-file '${workspaceRoot}/build/ZynqDemo.dbg'"},
+        {"text": "target extended-remote | REPLACE_TOOL_INSTALL_DIR/openocd/bin/openocd -f '${workspaceRoot}/dbg/picozed_jlink.cfg' -c reset"},
+        {"text": "load  '${workspaceRoot}/build/ZynqDemo.elf'"},
+        {"text": "break bsp_fatal", "ignoreFailures": true},
+        {"text": "break bsp_reset", "ignoreFailures": true},
+        {"text": "break  main", "ignoreFailures": true},
+        {"text": "jump  _start", "ignoreFailures": true}
+      ],
+      "logging": { 
+        "moduleLoad": true, 
+        "engineLogging": true, 
+        "trace": true,
+        "exceptions": true,
+        "programOutput": true,
+        "traceResponse": true
+      }
     }
   ]
 }
