--- a/user/bsps/arm/supplement/xilinx-zynq/app/cmake/rtems.spec.in
+++ b/user/bsps/arm/supplement/xilinx-zynq/app/cmake/rtems.spec.in
@@ -2,7 +2,7 @@
   crtend%O%s crtn%O%s %{!qnolinkcmds:-T linkcmds%s}
 
   *lib:
-  --start-group -lrtemsbsp -lrtemscpu -latomic -lc -lgcc @RTEMS_LIBBSD_ENABLED@ -lm -lz --end-group
+  --start-group -lrtemsbsp -lrtemscpu -latomic -lc -lgcc @RTEMS_LIBBSD_ENABLED@ @RTEMS_LWIP_ENABLED@ -lm -lz --end-group
 
   *startfile:
   crti%O%s crtbegin%O%s 
