--- a/user/bsps/arm/supplement/xilinx-zynq/app/src/CMakeLists.txt
+++ b/user/bsps/arm/supplement/xilinx-zynq/app/src/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_C_FLAGS ""  CACHE INTERNAL "c flags" FORCE)
 set(CMAKE_CXX_FLAGS ""  CACHE INTERNAL "c++ flags" FORCE)
 
 
-add_executable(${PROJECT_NAME} 
+add_executable(${PROJECT_NAME}
   #p1
   #${CMAKE_CURRENT_LIST_DIR}/main/main.cpp
   #${CMAKE_CURRENT_LIST_DIR}/main/pre_main.c
@@ -22,10 +22,57 @@ add_executable(${PROJECT_NAME}
   /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs01/init.c
   /home/blofeld/quick-start/src/rtems/testsuites/libtests/flashdev01/test_flashdev.c
   
-  )
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_alloc.t.a.c  
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_attrs.t.c        
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_bd.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_compat.t.c  
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_entries.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_evil.t.c
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_files.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_interspersed.t.c
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_orphans.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_paths.t.c
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_relocations.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_seek.t.c
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_truncate.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_alloc.t.c
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_badblocks.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_bd.t.c
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_dirs.t.a.c  
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_entries.t.c    
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_exhaustion.t.a.c  
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_files.t.c           
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_move.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_orphans.t.c    
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_powerloss.t.a.c  
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_relocations.t.c    
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_superblocks.t.a.c  
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_truncate.t.c
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_attrs.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_badblocks.t.c
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_compat.t.a.c  
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_dirs.t.c    
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_evil.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_exhaustion.t.c    
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_interspersed.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_move.t.c
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_paths.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_powerloss.t.c
+  #/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_seek.t.a.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/tests/test_superblocks.t.c
+
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/bd/lfs_emubd.t.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/bd/lfs_filebd.t.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/bd/lfs_rambd.t.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/bd/lfs_emubd.t.c
+  /home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02/runners/test_runner.t.c
+)
+target_include_directories(${PROJECT_NAME} PUBLIC "/home/blofeld/quick-start/src/rtems/testsuites/fstests/fslfs02")
+
 target_include_directories(${PROJECT_NAME} PUBLIC "/home/blofeld/quick-start/src/rtems/testsuites/support/include")
 target_link_libraries(${PROJECT_NAME}  rtemstest lfs)
-
+target_compile_options(${PROJECT_NAME} PUBLIC -fcallgraph-info=su -g3 -std=c99 -Wall -Wextra -pedantic -Wmissing-prototypes -ftrack-macro-expansion=0 -Os -Wno-missing-prototypes --coverage)
+target_link_options(${PROJECT_NAME} PUBLIC -fcallgraph-info=su -g3 -std=c99 -Wall -Wextra -pedantic -Wmissing-prototypes -ftrack-macro-expansion=0 -Os -Wno-missing-prototypes --coverage)
 set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS ${RTEMS_CMAKE_APPLICATION_EXE_LINKER_FLAGS})
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 14)
 target_compile_options(${PROJECT_NAME} 
@@ -42,9 +89,9 @@ target_compile_options(${PROJECT_NAME}
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_OBJCOPY}  $<TARGET_FILE:${PROJECT_NAME}> $<TARGET_FILE_BASE_NAME:${PROJECT_NAME}>.exe    
-    COMMAND ${CMAKE_OBJCOPY} --only-keep-debug $<TARGET_FILE:${PROJECT_NAME}> $<TARGET_FILE_BASE_NAME:${PROJECT_NAME}>.dbg
-    COMMAND ${CMAKE_OBJCOPY} --strip-unneeded $<TARGET_FILE:${PROJECT_NAME}>
-    COMMAND ${CMAKE_OBJCOPY} --add-gnu-debuglink=$<TARGET_FILE_BASE_NAME:${PROJECT_NAME}>.dbg $<TARGET_FILE:${PROJECT_NAME}>
+    #COMMAND ${CMAKE_OBJCOPY} --only-keep-debug $<TARGET_FILE:${PROJECT_NAME}> $<TARGET_FILE_BASE_NAME:${PROJECT_NAME}>.dbg
+    #COMMAND ${CMAKE_OBJCOPY} --strip-unneeded $<TARGET_FILE:${PROJECT_NAME}>
+    #COMMAND ${CMAKE_OBJCOPY} --add-gnu-debuglink=$<TARGET_FILE_BASE_NAME:${PROJECT_NAME}>.dbg $<TARGET_FILE:${PROJECT_NAME}>
     WORKING_DIRECTORY $<TARGET_FILE_DIR:${PROJECT_NAME}>
     COMMENT "Splitting off debug symbols from ${PROJECT_NAME}"
 )
